<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/scroll_view"
    tools:context="com.example.android.italianfoodquiz.MainActivity">

    <RelativeLayout style="@style/main_relative_layout">
        <!-- spaghetti image -->
        <ImageView
            android:id="@+id/spaghetti_image"
            style="@style/spaghetti_image"
            android:contentDescription="@string/spaghetti" />
        <!-- App Header -->
        <LinearLayout
            android:id="@+id/header"
            style="@style/header">
            <!-- presentation -->
            <TextView
                style="@style/presentation"
                android:text="@string/intro_1" />
            <!-- Horizontal line -->
            <View style="@style/horizontal_line" />
            <!-- line of text -->
            <TextView
                style="@style/intro_2"
                android:text="@string/intro_2" />

        </LinearLayout>
        <!-- Quiz Body -->
        <LinearLayout
            android:id="@+id/main_vertical_layout"
            style="@style/box_layout"
            android:layout_below="@+id/header">

            <!-- box 1 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/one" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_1" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 1 -->
                <RadioGroup
                    android:id="@+id/radio_group_q1"
                    style="@style/radio_group_horizontal">

                    <RadioButton
                        android:id="@+id/eggs"
                        style="@style/answer_1_radio_button"
                        android:text="@string/eggs" />

                    <RadioButton
                        android:id="@+id/cream"
                        style="@style/answer_1_radio_button"
                        android:text="@string/cream" />

                    <RadioButton
                        android:id="@+id/pepper"
                        style="@style/answer_1_radio_button"
                        android:text="@string/pepper" />

                </RadioGroup>

            </LinearLayout> <!-- end box 1 -->

            <!-- box 2 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/two" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_2" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 2 -->
                <EditText
                    android:id="@+id/edit_text_q2"
                    style="@style/answer_edit_text"
                    android:hint="@string/green" />

            </LinearLayout> <!-- end box 2 -->
            <!-- box 3 -->
            <LinearLayout style="@style/box_layout">
                <!-- first half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/three" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_3" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 3 -->
                <LinearLayout style="@style/answer_box">

                    <LinearLayout style="@style/answer_3and7">

                        <CheckBox
                            android:id="@+id/answer_3_one"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/bolognese_sauce" />

                        <CheckBox
                            android:id="@+id/answer_3_two"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/pineapple" />

                    </LinearLayout>

                    <LinearLayout style="@style/answer_3and7">

                        <CheckBox
                            android:id="@+id/answer_3_three"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/chicken" />

                        <CheckBox
                            android:id="@+id/answer_3_four"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/ketchup" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout> <!-- end box 3 -->
            <!-- box 4 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/four" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_4" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box -->
                <RadioGroup
                    android:id="@+id/radio_group_q4"
                    style="@style/radio_group_horizontal">

                    <RadioButton
                        android:id="@+id/true_value_q4"
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/true_value" />

                    <RadioButton
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/false_value" />

                </RadioGroup>

            </LinearLayout> <!-- end box 4 -->
            <!-- box 5 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/five" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_5" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 2 -->
                <ImageView
                    style="@style/sicilan_cannoli"
                    android:contentDescription="@string/cannoli" />

                <EditText
                    android:id="@+id/answer_5"
                    style="@style/answer_edit_text"
                    android:hint="@string/from_sicily" />

            </LinearLayout> <!-- end box 5 -->
            <!-- box 6 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/six" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_6" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box -->
                <RadioGroup
                    android:id="@+id/radio_group_q6"
                    style="@style/radio_group_horizontal">

                    <RadioButton
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/_1675" />

                    <RadioButton
                        android:id="@+id/true_value_q6"
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/_1889" />

                    <RadioButton
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/_1921" />

                    <RadioButton
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/_1742" />

                </RadioGroup>

            </LinearLayout> <!-- end box 6 -->
            <!-- box 7 -->
            <LinearLayout style="@style/box_layout">
                <!-- first half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/seven" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_7" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 7 -->
                <LinearLayout style="@style/answer_box">

                    <LinearLayout style="@style/answer_3and7">

                        <CheckBox
                            android:id="@+id/answer_7_one"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/ribollita" />

                        <CheckBox
                            android:id="@+id/answer_7_two"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/tortellini" />

                    </LinearLayout>

                    <LinearLayout style="@style/answer_3and7">

                        <CheckBox
                            android:id="@+id/answer_7_three"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/amatriciana" />

                        <CheckBox
                            android:id="@+id/answer_7_four"
                            style="@style/answer_3and7_checkboxes"
                            android:text="@string/panzanella" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout> <!-- end box 7 -->
            <!-- box 8 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/eight" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_8" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 8 -->
                <ImageView
                    style="@style/pandoro"
                    android:contentDescription="@string/pandoro" />

                <RadioGroup
                    android:id="@+id/radio_group_q8"
                    style="@style/radio_group_horizontal">

                    <RadioButton
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/panettone" />

                    <RadioButton
                        android:id="@+id/true_value_q8"
                        style="@style/answer_4and6and8_radio_button"
                        android:text="@string/pandoro" />

                </RadioGroup>

            </LinearLayout> <!-- end box 8 -->
            <!-- box 9 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/nine" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_9" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 1 -->
                <RadioGroup
                    android:id="@+id/radio_group_q9"
                    style="@style/radio_group_vertical">

                    <RadioButton
                        style="@style/answer_9_radio_button"
                        android:text="@string/recipe1" />

                    <RadioButton
                        style="@style/answer_9_radio_button"
                        android:text="@string/recipe2" />

                    <RadioButton
                        android:id="@+id/recipe3"
                        style="@style/answer_9_radio_button"
                        android:text="@string/recipe3" />

                    <RadioButton
                        style="@style/answer_9_radio_button"
                        android:text="@string/recipe4" />

                </RadioGroup>

            </LinearLayout> <!-- end box 9 -->
            <!-- box 10 -->
            <LinearLayout style="@style/box_layout">
                <!-- upper half of the box -->
                <LinearLayout style="@style/layout_number_question">
                    <!-- question number -->
                    <TextView
                        style="@style/number_box"
                        android:text="@string/ten" />
                    <!-- question  -->
                    <TextView
                        style="@style/question_box"
                        android:text="@string/question_10" />

                </LinearLayout> <!-- closing horizontal layout number+question -->
                <!-- answer box 2 -->
                <ImageView
                    style="@style/orecchiette"
                    android:contentDescription="@string/orecchiette" />

                <EditText
                    android:id="@+id/answer_10"
                    style="@style/answer_edit_text"
                    android:hint="@string/ears" />

            </LinearLayout> <!-- end box 10 -->

        </LinearLayout> <!-- end main vertical layout -->

        <Button
            android:id="@+id/submit_button"
            style="@style/submit_button"
            android:onClick="displayScore" />

        <Button
            android:id="@+id/retake_button"
            style="@style/retake_button"
            android:onClick="retakeQuiz" />
        <!-- Footer -->
        <LinearLayout style="@style/footer">

            <Button
                style="@style/open_browser_button"
                android:onClick="openBrowser" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
